fix: correct pagination spacing on mobile

--- a/src/components/molecules/pagination/_pagination.scss
+++ b/src/components/molecules/pagination/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 2fr 2fr 2fr;
   align-items: center;
 
   &__prev {
